--- a/analyse_results/table_for_papers.ipynb
+++ b/analyse_results/table_for_papers.ipynb
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,37 +757,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "p = '/data1/jessica/data/toyota/ckpts_final/'\n",
+    "\n",
+    "experiments = os.listdir(p)\n",
+    "res = {}\n",
+    "for elem in experiments:\n",
+    "    path = p + elem + \"/lightning_logs/\" \n",
+    "    version = os.listdir(path)[0]\n",
+    "    checkpoint_path = path + version + \"/checkpoints/\"\n",
+    "    if \"checkpoints\" not in os.listdir(path + version): continue\n",
+    "    files = os.listdir(checkpoint_path)\n",
+    "\n",
+    "    for filename in files: \n",
+    "        if filename.endswith(\".csv\"):\n",
+    "            df = pd.read_csv(checkpoint_path + filename)\n",
+    "            df.columns = ['preds', 'targets']\n",
+    "            m = (df['targets'] > 70).astype(bool) | (df['targets'] == 0).astype(bool) \n",
+    "            \n",
+    "            loss3 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "            res[elem] = loss3.item()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2254314122.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    Algorithm | Backbone | Task RMSE | Concept Accuracy\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'ckpts_final_comma_multitask_none': tensor(4.7555, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_angle_vit': tensor(41.0845, dtype=torch.float64),\n",
+       " 'ckpts_final_comma_angle_resnet': tensor(3.3229, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_angle_resnet': tensor(40.3987, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_distance_vit': tensor(39.7814, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_angle_none': tensor(31.7897, dtype=torch.float64),\n",
+       " 'ckpts_final_comma_distance_none': tensor(4.1892, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_angle_clip': tensor(17.8787, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_distance_clip': tensor(21.0204, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_distance_none': tensor(27.8944, dtype=torch.float64),\n",
+       " 'ckpts_final_comma_angle_none': tensor(5.3258, dtype=torch.float64),\n",
+       " 'ckpts_final_nuscenes_distance_resnet': tensor(42.1397, dtype=torch.float64)}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#This fetches all the models and checkpoints, predicts on the test set and combines the results into a table\n",
-    "# The table shows \n",
-    "\n",
-    "Algorithm | Backbone | Task RMSE | Concept Accuracy"
+    "res"
    ]
   },
   {
