add new visualization for explanation

--- a/analyse_results/attention_figure.ipynb
+++ b/analyse_results/attention_figure.ipynb
@@ -24,154 +24,7 @@
     "import os\n",
     "from utils import * \n",
     "import re\n",
-    "gpu_num = 0\n",
-    "multitask = 'distance'\n",
-    "backbone = 'none'\n",
-    "concept_features = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "commda_ds = CommaDataset(dataset_type=\"test\",\n",
-    "        multitask=\"distance\",\n",
-    "        ground_truth=\"normal\", dataset_path='/data1/jessica/data/toyota/')\n",
-    "nuscenes_ds = NUScenesDataset(dataset_type=\"test\",\n",
-    "        multitask=\"distance\",\n",
-    "        ground_truth=\"normal\", dataset_path='/data1/jessica/data/toyota/' )\n",
-    "dataloader_comma = DataLoader(commda_ds, batch_size=1, shuffle=False, num_workers=0, collate_fn=pad_collate)\n",
-    "dataloader_nuscenes = DataLoader(nuscenes_ds, batch_size=1, shuffle=False, num_workers=0, collate_fn=pad_collate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_regular_ckpt_from_lightning_checkpoint(state_dict):\n",
-    "    for key in list(state_dict.keys()):\n",
-    "        oldkey = key\n",
-    "        if oldkey[0:6] == 'model.':\n",
-    "            key = oldkey[6:]\n",
-    "            state_dict[key] = state_dict.pop(oldkey)\n",
-    "    return state_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using concept features\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = VTN(multitask=multitask, backbone=backbone, concept_features=concept_features, device = f\"cuda:{gpu_num}\", return_concepts=True)\n",
-    "checkpoint_path = '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_none/lightning_logs/version_0/checkpoints//epoch=50-step=3162.ckpt'\n",
-    "ckpt = torch.load(checkpoint_path, map_location=f'cuda:{gpu_num}')\n",
-    "state_dict = ckpt['state_dict']\n",
-    "state_dict = get_regular_ckpt_from_lightning_checkpoint(state_dict)\n",
-    "model.load_state_dict(state_dict)\n",
-    "model.eval()\n",
-    "model = model.to(f'cuda:{gpu_num}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scenarios_tokens = scenarios_tokens.to(f'cuda:{gpu_num}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def moving_average(signal, window_size):\n",
-    "    window = np.ones(window_size) / window_size\n",
-    "    smoothed_signal = np.convolve(signal, window, mode='same')\n",
-    "    return smoothed_signal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def get_aligned_attention(attention):\n",
-    "    attention = attention[:, 1:-1]\n",
-    "    sequence_length = seq_len\n",
-    "    window_size = 8\n",
-    "    overlap = 4\n",
-    "    global_attended_token = 1\n",
-    "    padding_tokens = 8\n",
-    "    # Calculate the number of chunks\n",
-    "    number_of_chunks = np.ceil((sequence_length - window_size + overlap + 1) / (window_size - overlap)).astype(int)\n",
-    "\n",
-    "    # Create an empty alignment array\n",
-    "    alignment_array = np.zeros((sequence_length + 2 * window_size , sequence_length + 2 * window_size), dtype=float)\n",
-    "\n",
-    "    # Iterate over each chunk and extract attended token index\n",
-    "    for chunk_idx in range(number_of_chunks):\n",
-    "        # Calculate the start and end indices of the chunk\n",
-    "        start_index = chunk_idx * (window_size - overlap)\n",
-    "        end_index = start_index + window_size\n",
-    "        alignment_array[chunk_idx, start_index:end_index] = attention[chunk_idx]\n",
-    "    return alignment_array\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class UnNormalize(object):\n",
-    "    '''Since the dataloader returns normalized images, we migth need to unnormalize them again'''\n",
-    "    def __init__(self, mean, std):\n",
-    "        self.mean = mean\n",
-    "        self.std = std\n",
-    "\n",
-    "    def __call__(self, tensor):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            tensor (Tensor): Tensor image of size (C, H, W) to be normalized.\n",
-    "        Returns:\n",
-    "            Tensor: Normalized image.\n",
-    "        \"\"\"\n",
-    "        for t, m, s in zip(tensor, self.mean, self.std):\n",
-    "            t.mul_(s).add_(m)\n",
-    "            # The normalize code -> t.sub_(m).div_(s)\n",
-    "        return tensor\n",
-    "\n",
-    "unorm = UnNormalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_number(filename):\n",
-    "        match = re.search(r'\\d+', filename)\n",
-    "        return int(match.group()) if match else -1"
+    "from vis_utils import * \n"
    ]
   },
   {
@@ -11572,7 +11425,6 @@
     "    distance = distance.to(\"cpu\")\n",
     "    vego = vego.to(\"cpu\")\n",
     "    logits = logits.detach().cpu().to(\"cpu\")\n",
-    "    #attns = attns.detach().cpu().to(\"cpu\")\n",
     "    concepts = concepts.detach().cpu().to(\"cpu\")\n",
     "\n",
     "    att = attns[0][:,:,0:concepts.shape[1]].detach()\n",
@@ -11604,8 +11456,6 @@
     "\n",
     "    # Multiply the expanded attention array element-wise with the classification array\n",
     "    result = classification_array * expanded_attention\n",
-    "\n",
-    "\n",
     "    \n",
     "    f = []\n",
     "    inter = []\n",
@@ -11696,187 +11546,6 @@
     "    plt.savefig(f\"/home/jessica/personalized_driving_toyota/attention_vis{j}.png\")\n",
     "    if j > 16: break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mse_loss(input, target, mask, reduction=\"mean\"):\n",
-    "        out = (input[~mask]-target[~mask])**2\n",
-    "        return out.mean() if reduction == \"mean\" else out "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "version_0 ['version_0']\n",
-      "version_0 ['version_0']\n",
-      "version_5 ['version_4', 'version_5']\n",
-      "version_2 ['version_0', 'version_2', 'version_1']\n",
-      "version_4 ['version_4', 'version_3']\n",
-      "version_0 ['version_0']\n",
-      "version_0 ['version_0']\n",
-      "version_7 ['version_4', 'version_3', 'version_6', 'version_7', 'version_2', 'version_1', 'version_5']\n",
-      "version_2 ['version_0', 'version_2', 'version_1']\n",
-      "version_4 ['version_4', 'version_3', 'version_0', 'version_2']\n",
-      "version_5 ['version_4', 'version_3', 'version_2', 'version_5']\n",
-      "version_6 ['version_4', 'version_3', 'version_6', 'version_2', 'version_1', 'version_5']\n",
-      "version_0 ['version_0']\n",
-      "version_5 ['version_4', 'version_5']\n",
-      "version_2 ['version_2', 'version_1']\n",
-      "version_0 ['version_0']\n",
-      "version_0 ['version_0']\n",
-      "version_1 ['version_0', 'version_1']\n",
-      "version_7 ['version_4', 'version_3', 'version_6', 'version_0', 'version_7', 'version_1', 'version_5']\n",
-      "version_0 ['version_0']\n",
-      "version_8 ['version_7', 'version_8']\n",
-      "version_1 ['version_1']\n",
-      "version_4 ['version_4']\n",
-      "version_2 ['version_2']\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "p = '/data1/jessica/data/toyota/ckpts_final/'\n",
-    "\n",
-    "experiments = os.listdir(p)\n",
-    "res = {}\n",
-    "res_ckpt = {}\n",
-    "for elem in experiments:\n",
-    "    path = p + elem + \"/lightning_logs/\" \n",
-    "    versions =[ elem[-1 ]for elem in os.listdir(path)]\n",
-    "    versions = sorted(versions)\n",
-    "    version = f\"version_{versions[-1]}\"\n",
-    "    print(version, os.listdir(path))\n",
-    "    checkpoint_path = path + version + \"/checkpoints/\"\n",
-    "    if \"checkpoints\" not in os.listdir(path + version): continue\n",
-    "    files = os.listdir(checkpoint_path)\n",
-    "\n",
-    "    task = []\n",
-    "    ckpt = []\n",
-    "    for filename in files: \n",
-    "        if filename.endswith(\".csv\"):\n",
-    "            df = pd.read_csv(checkpoint_path + filename)\n",
-    "            df.columns = ['preds', 'targets']\n",
-    "            m = (df['targets'] > 50).astype(bool) | (df['targets'] == 0).astype(bool) \n",
-    "            \n",
-    "            loss3 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
-    "            task.append(loss3.item())\n",
-    "        if filename.endswith(\".ckpt\"):\n",
-    "            ckpt.append(checkpoint_path + '/' + filename)\n",
-    "    res[elem] = task\n",
-    "    res_ckpt[elem] = ckpt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ckpts_final_comma_distance_resnet': [4.665587373198741],\n",
-       " 'ckpts_final_comma_multitask_none': [3.3693716510452907, 4.579165410378686],\n",
-       " 'ckpts_final_nuscenes_multitask_resnet': [],\n",
-       " 'ckpts_final_comma_multitask_resnet': [4.987273033355811, 2.832363118532193],\n",
-       " 'ckpts_final_comma_angle_resnet': [3.1649969769178874],\n",
-       " 'ckpts_final_nuscenes_multitask_vit': [],\n",
-       " 'ckpts_final_nuscenes_multitask_clip': [],\n",
-       " 'ckpts_final_nuscenes_angle_none': [],\n",
-       " 'ckpts_final_comma_distance_none': [3.3851383559744126],\n",
-       " 'ckpts_final_nuscenes_angle_clip': [],\n",
-       " 'ckpts_final_nuscenes_distance_clip': [],\n",
-       " 'ckpts_final_comma_multitask_vit': [4.923400746465994, 2.9565217244374127],\n",
-       " 'ckpts_final_comma_multitask_clip': [],\n",
-       " 'ckpts_final_nuscenes_distance_none': [],\n",
-       " 'ckpts_final_comma_angle_none': [5.155869130660418],\n",
-       " 'ckpts_final_nuscenes_distance_resnet': [28.18212454012493],\n",
-       " 'ckpts_final_comma_angle_clip': [],\n",
-       " 'ckpts_final_comma_distance_vit': [5.023062603070098]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ckpts_final_comma_distance_resnet': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_resnet/lightning_logs/version_0/checkpoints//epoch=30-step=3844.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_resnet/lightning_logs/version_0/checkpoints//epoch=16-step=2108.ckpt'],\n",
-       " 'ckpts_final_comma_multitask_none': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none/lightning_logs/version_0/checkpoints//epoch=66-step=4154.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none/lightning_logs/version_0/checkpoints//epoch=72-step=4526.ckpt'],\n",
-       " 'ckpts_final_nuscenes_angle_vit': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_vit/lightning_logs/version_4/checkpoints//epoch=169-step=23630.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_vit/lightning_logs/version_4/checkpoints//epoch=168-step=23491.ckpt'],\n",
-       " 'ckpts_final_nuscenes_multitask_resnet': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_resnet/lightning_logs/version_3/checkpoints//epoch=169-step=23630.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_resnet/lightning_logs/version_3/checkpoints//epoch=170-step=23769.ckpt'],\n",
-       " 'ckpts_final_comma_multitask_resnet': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_resnet/lightning_logs/version_0/checkpoints//epoch=87-step=10912.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_resnet/lightning_logs/version_0/checkpoints//epoch=64-step=8060.ckpt'],\n",
-       " 'ckpts_final_comma_angle_resnet': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_resnet/lightning_logs/version_0/checkpoints//epoch=29-step=3720.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_resnet/lightning_logs/version_0/checkpoints//epoch=25-step=3224.ckpt'],\n",
-       " 'ckpts_final_nuscenes_distance_vit': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_vit/lightning_logs/version_2/checkpoints//epoch=56-step=7923.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_vit/lightning_logs/version_2/checkpoints//epoch=62-step=8757.ckpt'],\n",
-       " 'ckpts_final_nuscenes_multitask_clip': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_clip/lightning_logs/version_4/checkpoints//epoch=11-step=1668.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_clip/lightning_logs/version_4/checkpoints//epoch=12-step=1807.ckpt'],\n",
-       " 'ckpts_final_nuscenes_angle_none': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_none/lightning_logs/version_1/checkpoints//epoch=189-step=26410.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_none/lightning_logs/version_1/checkpoints//epoch=180-step=25159.ckpt'],\n",
-       " 'ckpts_final_comma_distance_none': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_none/lightning_logs/version_0/checkpoints//epoch=36-step=2294.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_none/lightning_logs/version_0/checkpoints//epoch=50-step=3162.ckpt'],\n",
-       " 'ckpts_final_nuscenes_angle_clip': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_clip/lightning_logs/version_4/checkpoints//epoch=192-step=26827.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_clip/lightning_logs/version_4/checkpoints//epoch=198-step=27661.ckpt'],\n",
-       " 'ckpts_final_nuscenes_distance_clip': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_clip/lightning_logs/version_1/checkpoints//epoch=116-step=16263.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_clip/lightning_logs/version_1/checkpoints//epoch=101-step=14178.ckpt'],\n",
-       " 'ckpts_final_comma_multitask_vit': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_vit/lightning_logs/version_0/checkpoints//epoch=165-step=41002.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_vit/lightning_logs/version_0/checkpoints//epoch=166-step=41249.ckpt'],\n",
-       " 'ckpts_final_comma_multitask_clip': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_clip/lightning_logs/version_0/checkpoints//epoch=103-step=25688.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_clip/lightning_logs/version_0/checkpoints//epoch=21-step=5434.ckpt'],\n",
-       " 'ckpts_final_nuscenes_distance_none': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none/lightning_logs/version_3/checkpoints//epoch=16-step=1190.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none/lightning_logs/version_3/checkpoints//epoch=17-step=1260.ckpt'],\n",
-       " 'ckpts_final_comma_angle_none': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none/lightning_logs/version_0/checkpoints//epoch=1-step=124.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none/lightning_logs/version_0/checkpoints//epoch=2-step=186.ckpt'],\n",
-       " 'ckpts_final_nuscenes_distance_resnet': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_resnet/lightning_logs/version_1/checkpoints//epoch=137-step=19182.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_resnet/lightning_logs/version_1/checkpoints//epoch=183-step=25576.ckpt'],\n",
-       " 'ckpts_final_comma_angle_clip': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_clip/lightning_logs/version_4/checkpoints//epoch=63-step=7936.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_clip/lightning_logs/version_4/checkpoints//epoch=65-step=8184.ckpt'],\n",
-       " 'ckpts_final_comma_distance_vit': ['/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_vit/lightning_logs/version_2/checkpoints//epoch=10-step=2717.ckpt',\n",
-       "  '/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_vit/lightning_logs/version_2/checkpoints//epoch=3-step=988.ckpt']}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res_ckpt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
