--- a/analyse_results/attention_figure.ipynb
+++ b/analyse_results/attention_figure.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using concept features\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy\n",
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -11546,6 +11554,13 @@
     "    plt.savefig(f\"/home/jessica/personalized_driving_toyota/attention_vis{j}.png\")\n",
     "    if j > 16: break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
