--- a/analyse_results/table_for_papers copy.ipynb
+++ b/analyse_results/table_for_papers copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,31 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = \"/home/jessica/personalized_driving_toyota/scenarios/scenarios_nuscenes.txt\"\n",
-    "with open(p) as file:\n",
-    "    lines = [line.strip() for line in file]\n",
-    "scenarios = lines\n",
-    "scenarios = random.sample(scenarios, 24)\n",
-    "with open(\"scenarios_small_24.txt\", \"w\") as file:\n",
-    "    for item in scenarios:\n",
-    "        file.write(str(item) + \"\\n\")\n",
-    "p = \"/home/jessica/personalized_driving_toyota/scenarios/scenarios_nuscenes.txt\"\n",
-    "with open(p) as file:\n",
-    "    lines = [line.strip() for line in file]\n",
-    "scenarios = lines\n",
-    "scenarios = random.sample(scenarios, 48)\n",
-    "with open(\"scenarios_small_48.txt\", \"w\") as file:\n",
-    "    for item in scenarios:\n",
-    "        file.write(str(item) + \"\\n\")"
+    "def rmse_loss(input, target, mask, reduction=\"mean\"):\n",
+    "        out = (input[~mask]-target[~mask])**2\n",
+    "        return out.mean().sqrt() if reduction == \"mean\" else out \n",
+    "\n",
+    "def mae_loss(input, target, mask, reduction=\"mean\"):\n",
+    "        out = (input[~mask]-target[~mask])\n",
+    "        return out.mean().abs() if reduction == \"mean\" else out "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +74,23 @@
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_none_True/lightning_logs/version_5/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_none_True/lightning_logs/version_3/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_none_True/lightning_logs/version_2/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_multitask_none_True/lightning_logs/version_5/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none_True_0.5/lightning_logs/version_1/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none_True/lightning_logs/version_4/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none_True/lightning_logs/version_3/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none_True/lightning_logs/version_2/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_multitask_none_True/lightning_logs/version_5/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none_True/lightning_logs/version_4/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none_True/lightning_logs/version_3/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_distance_none_True/lightning_logs/version_2/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_none_True/lightning_logs/version_6/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_none_True/lightning_logs/version_2/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_nuscenes_angle_none_True/lightning_logs/version_8/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none_True/lightning_logs/version_4/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none_True/lightning_logs/version_3/checkpoints/hparams.yaml\n",
       "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none_True/lightning_logs/version_2/checkpoints/hparams.yaml\n",
-      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none_True/lightning_logs/version_5/checkpoints/hparams.yaml\n"
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_angle_none_True/lightning_logs/version_5/checkpoints/hparams.yaml\n",
+      "/data1/jessica/data/toyota/ckpts_final/ckpts_final_comma_distance_resnet_True/lightning_logs/version_3/checkpoints/hparams.yaml\n"
      ]
     }
    ],
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,51 +140,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "rows = []\n",
+    "for elem in res.keys():\n",
+    "    task = \"dist\" if \"dist\" in elem else (\"angle\" if 'angle' in elem else \"multitask\")\n",
+    "    dataset = \"comma\" if 'comma' in elem else \"nuscenes\"\n",
+    "    size = 100 if '100' in elem else (300 if '300' in elem else (24 if '24' in elem else 48 if '48' in elem else \"none\"))\n",
+    "    val = res[elem]\n",
+    "    if task == 'multitask' or size == \"none\" or dataset != \"nuscenes\": continue\n",
+    "    rows.append({'task': task, 'dataset': dataset, \"MAE\": val[0], \"size\":size})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>task</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>angle</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>angle</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>angle</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>4.01</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dist</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dist</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dist</td>\n",
+       "      <td>nuscenes</td>\n",
+       "      <td>2.27</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "({'comma_distance_none_True_300.csv': [0.6],\n",
-       "  'comma_distance_none_True_24.csv': [3.48],\n",
-       "  'comma_distance_none_True_100.csv': [0.22],\n",
-       "  'comma_distance_none_True_48.csv': [1.15],\n",
-       "  'dist_multi_nuscenes_multitask_none_True.csv': [2.73, 7.4],\n",
-       "  'angle_multi_nuscenes_multitask_none_True.csv': [2.73, 7.4],\n",
-       "  'dist_multi_comma_multitask_none_True.csv': [1.95, 0.12],\n",
-       "  'angle_multi_comma_multitask_none_True.csv': [1.95, 0.12],\n",
-       "  'nuscenes_distance_none_True_300.csv': [2.27],\n",
-       "  'nuscenes_angle_none_True_300.csv': [4.01],\n",
-       "  'comma_angle_none_True_48.csv': [0.3],\n",
-       "  'comma_angle_none_True_100.csv': [0.27],\n",
-       "  'comma_angle_none_True_300.csv': [0.43],\n",
-       "  'comma_angle_none_True_24.csv': [0.38]},\n",
-       " [300, 24, 100, 48, 100, 300, 100, 100, 300, 48, 300, 300, 48, 100, 300, 24])"
+       "    task   dataset   MAE  size\n",
+       "3  angle  nuscenes  1.49    24\n",
+       "5  angle  nuscenes  0.60    48\n",
+       "4  angle  nuscenes  4.01   300\n",
+       "0   dist  nuscenes  1.85    24\n",
+       "1   dist  nuscenes  0.02    48\n",
+       "2   dist  nuscenes  2.27   300"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res, n_feats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rmse_loss(input, target, mask, reduction=\"mean\"):\n",
-    "        out = (input[~mask]-target[~mask])**2\n",
-    "        return out.mean().sqrt() if reduction == \"mean\" else out \n",
-    "\n",
-    "def mae_loss(input, target, mask, reduction=\"mean\"):\n",
-    "        out = (input[~mask]-target[~mask])\n",
-    "        return out.mean().abs() if reduction == \"mean\" else out "
+    "pd.DataFrame(rows).sort_values('size').sort_values('task')"
    ]
   },
   {
