--- a/analyse_results/attention_figure.ipynb
+++ b/analyse_results/attention_figure.ipynb
@@ -43,6 +43,7 @@
     "from utils import * \n",
     "import re\n",
     "from vis_utils import * \n",
+    "from tqdm import tqdm\n",
     "import warnings \n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"matplotlib\")\n"
@@ -51,15 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
