--- a/analyse_results/attention_figure.ipynb
+++ b/analyse_results/attention_figure.ipynb
@@ -91,15 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "215it [00:48,  4.41it/s]\n",
-      "[rawvideo @ 0x554c680] Stream #0: not enough frames to estimate rate; consider increasing probesize\n"
+      "215it [00:44,  4.79it/s]\n",
+      "[rawvideo @ 0x60fa680] Stream #0: not enough frames to estimate rate; consider increasing probesize\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "All images in a movie should have same size",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 127\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[39m# Save the frames as a GIF\u001b[39;00m\n\u001b[1;32m    125\u001b[0m frames[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msave(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/home/jessica/personalized_driving_toyota/result_images/mturk/att/w_attention_nusc_\u001b[39m\u001b[39m{\u001b[39;00mj\u001b[39m}\u001b[39;00m\u001b[39m.gif\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mGIF\u001b[39m\u001b[39m'\u001b[39m, append_images\u001b[39m=\u001b[39mframes[\u001b[39m1\u001b[39m:], save_all\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    126\u001b[0m            duration\u001b[39m=\u001b[39mframe_duration, loop\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m--> 127\u001b[0m imageio\u001b[39m.\u001b[39;49mmimsave(output_path(\u001b[39m\"\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m\"\u001b[39;49m), frames, fps\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m    128\u001b[0m \u001b[39m#imageio.mimsave(output_path(\"1\"), frames[40:56], fps=2)\u001b[39;00m\n\u001b[1;32m    130\u001b[0m directory \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/home/jessica/personalized_driving_toyota/result_images/mturk\u001b[39m\u001b[39m'\u001b[39m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/imageio/v2.py:495\u001b[0m, in \u001b[0;36mmimwrite\u001b[0;34m(uri, ims, format, **kwargs)\u001b[0m\n\u001b[1;32m    493\u001b[0m imopen_args[\u001b[39m\"\u001b[39m\u001b[39mlegacy_mode\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    494\u001b[0m \u001b[39mwith\u001b[39;00m imopen(uri, \u001b[39m\"\u001b[39m\u001b[39mwI\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mimopen_args) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m--> 495\u001b[0m     \u001b[39mreturn\u001b[39;00m file\u001b[39m.\u001b[39;49mwrite(ims, is_batch\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/imageio/core/legacy_plugin_wrapper.py:253\u001b[0m, in \u001b[0;36mLegacyPlugin.write\u001b[0;34m(self, ndimage, is_batch, metadata, **kwargs)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39missubdtype(image\u001b[39m.\u001b[39mdtype, np\u001b[39m.\u001b[39mnumber) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39missubdtype(\n\u001b[1;32m    247\u001b[0m             image\u001b[39m.\u001b[39mdtype, \u001b[39mbool\u001b[39m\n\u001b[1;32m    248\u001b[0m         ):\n\u001b[1;32m    249\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    250\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAll images have to be numeric, and not `\u001b[39m\u001b[39m{\u001b[39;00mimage\u001b[39m.\u001b[39mdtype\u001b[39m}\u001b[39;00m\u001b[39m`.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    251\u001b[0m             )\n\u001b[0;32m--> 253\u001b[0m         writer\u001b[39m.\u001b[39;49mappend_data(image, metadata)\n\u001b[1;32m    255\u001b[0m \u001b[39mreturn\u001b[39;00m writer\u001b[39m.\u001b[39mrequest\u001b[39m.\u001b[39mget_result()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/imageio/core/format.py:590\u001b[0m, in \u001b[0;36mFormat.Writer.append_data\u001b[0;34m(self, im, meta)\u001b[0m\n\u001b[1;32m    588\u001b[0m im \u001b[39m=\u001b[39m asarray(im)\n\u001b[1;32m    589\u001b[0m \u001b[39m# Call\u001b[39;00m\n\u001b[0;32m--> 590\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_append_data(im, total_meta)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/imageio/plugins/ffmpeg.py:591\u001b[0m, in \u001b[0;36mFfmpegFormat.Writer._append_data\u001b[0;34m(self, im, meta)\u001b[0m\n\u001b[1;32m    589\u001b[0m \u001b[39m# Check size of image\u001b[39;00m\n\u001b[1;32m    590\u001b[0m \u001b[39mif\u001b[39;00m size \u001b[39m!=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_size:\n\u001b[0;32m--> 591\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAll images in a movie should have same size\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    592\u001b[0m \u001b[39mif\u001b[39;00m depth \u001b[39m!=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_depth:\n\u001b[1;32m    593\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    594\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mAll images in a movie should have same \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnumber of channels\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    595\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: All images in a movie should have same size"
      ]
     }
    ],
